# BaseweightSnap

./: .gitignore  .gitmodules  EXECUTORCH_STATUS.md  HF_MODEL_PULLING_PLAN.md  NATIVE_BUILD_VARIANTS.md  ONNX_MIGRATION_README.md  README.md  build-native-variants.sh  build_static.sh  settings.gradle.kts  setup_dynamic_env.sh  setup_static_env.sh
.github/workflows/: ci.yml
app/: build.gradle.kts  extract-ort.gradle.kts
app/src/androidTest/java/ai/baseweight/baseweightsnap/: ExampleInstrumentedTest.kt
app/src/androidTest/java/ai/baseweight/baseweightsnap/models/: HuggingFaceApiClientTest.kt  ModelMetadataManagerTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists_cpu.txt  CMakeLists_vulkan.txt  ImageProcessor.cpp  ImageProcessor.h  SmolVLM.cpp  SmolVLM.h  SmolVLMTokenizer.cpp  SmolVLMTokenizer.h  config_loader.h  image_preprocessor.cpp  image_preprocessor.h  model_manager.cpp  model_manager.h  mtmd-android.cpp  nanovlm_android.cpp  native-lib.cpp
app/src/main/java/ai/baseweight/baseweightsnap/: MMTD_Android.kt  MTMD_Android.kt  MainActivity.kt  ModelDownloader.kt  ModelManager.kt  NanoVLM_Android.kt  SmolVLMAndroid.kt  SplashActivity.kt  TextGenerationCallback.kt  VulkanDetector.kt
app/src/main/java/ai/baseweight/baseweightsnap/models/: HFModelMetadata.kt  HuggingFaceApiClient.kt  ModelMetadataManager.kt
app/src/main/java/ai/baseweight/baseweightsnap/services/: ModelDownloadService.kt
app/src/main/java/ai/baseweight/baseweightsnap/ui/: ModelAdapter.kt  ModelManagerActivity.kt
app/src/main/res/drawable/: baseweightmascot_white.xml  ic_launcher_foreground.xml  rounded_button_background.xml  snap_icon_android.xml
app/src/main/res/drawable-anydpi/: ic_action_explain.xml
app/src/main/res/layout/: activity_main.xml  activity_model_manager.xml  activity_splash.xml  dialog_add_model.xml  dialog_instructions.xml  dialog_progress.xml  item_model.xml
app/src/main/res/menu/: main_menu.xml  model_options_menu.xml
app/src/main/res/values/: config.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/ai/baseweight/baseweightsnap/: DownloadErrorFlowTest.kt  ExampleUnitTest.kt
app/src/test/java/ai/baseweight/baseweightsnap/models/: HFModelMetadataTest.kt
app/src/test/java/ai/baseweight/baseweightsnap/services/: ModelDownloadServiceTest.kt
app/src/test/java/ai/baseweight/baseweightsnap/ui/: ModelManagerActivityTest.kt
docs/: HEXAGON_BRANCH.md  HEXAGON_BUILD.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust-tokenizer/: Cargo.toml
rust-tokenizer/include/: nanovlm_preprocessor.h
rust-tokenizer/src/: lib.rs
scripts/: build-hexagon.sh
smolvlm_rs_lib/: Cargo.toml
smolvlm_rs_lib/src/: image_processor.rs  lib.rs  lib_simple.rs
